--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  midtrans_sdk: ^0.3.4
 
 
   # The following adds the Cupertino Icons font to your application.
